# swe-bench

./: .gitignore  README.md  cli.py  models.py  pyproject.toml  requirements.txt
swe_bench/: __init__.py  __main__.py  cli.py  models.py  utilities.py
